--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "scripts": {
     "push": "cz",
     "semantic-release": "semantic-release"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
