feat: switch docker implementation and clean up dependencies

--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "semantic-release": "^18.0.0"
   },
   "dependencies": {
-    "@eclass/semantic-release-docker": "github:0-vortex/semantic-release-docker#next",
+    "@semantic-release-plus/docker": "^3.0.1",
     "@semantic-release/changelog": "^6.0.0",
-    "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
-    "@semantic-release/github": "^8.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.2",
     "conventional-changelog-conventionalcommits": "^4.6.1"
   },
   "devDependencies": {
@@ -37,8 +34,8 @@
   "scripts": {
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
-    "push": "cz",
-    "semantic-release": "semantic-release"
+    "push": "npx cz",
+    "semantic-release": "npx semantic-release"
   },
   "publishConfig": {
     "access": "public"
