--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: "🔧 setup node"
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: 12
+          node-version: 14
 
       - name: "🔧 setup cache"
         uses: actions/cache@v2
@@ -31,8 +31,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: "🔧 install npm@7"
-        run: npm i -g npm@7
+      - name: "🔧 install npm@latest"
+        run: npm i -g npm@latest
 
       - name: "📦 install dependencies"
         run: npm ci
@@ -48,5 +48,5 @@ jobs:
           GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
           GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
         run: |
-          npx semantic-release
+          npm run semantic-release
           echo "::set-output name=version::$(cat package.json | jq -r '.version')"
