--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "semantic-release": "^18.0.0"
   },
   "dependencies": {
+    "semantic-release": "^18.0.0",
     "@semantic-release-plus/docker": "^3.0.1",
     "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^4.6.1"
   },
   "devDependencies": {
     "@open-sauced/check-engines": "^1.1.1",
-    "@open-sauced/conventional-commit": "^1.0.1",
-    "semantic-release": "^18.0.0"
+    "@open-sauced/conventional-commit": "^1.0.1"
   },
   "scripts": {
     "preinstall": "npx @open-sauced/check-engines",
