fix: correct docker plugin release notification

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "url": "git+ssh://git@github.com/open-sauced/semantic-release-conventional-config.git"
   },
   "peerDependencies": {
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^18.0.1"
   },
   "dependencies": {
-    "@semantic-release-plus/docker": "^3.1.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
     "conventional-changelog-conventionalcommits": "^4.6.1",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^18.0.1",
+    "semantic-release-docker-mini": "^1.2.3"
   },
   "devDependencies": {
     "@open-sauced/check-engines": "^1.2.0",
