--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: "Release"
+name: "Semantic release"
 
 on:
   push:
@@ -53,7 +53,7 @@ jobs:
   release:
     environment:
       name: production
-      url: https://github.com/${{ github.repository }}/releases/tag/v${{ steps.release.outputs.version }}
+      url: https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_TAG }}
     name: Semantic release
     needs:
       - docker
@@ -91,15 +91,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          DOCKER_USERNAME: ${{ github.repository_owner }}
-          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-          GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.username }}
-          GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email }}
-          GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
-          GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
         run: |
-          npm run semantic-release
-          echo "::set-output name=version::$(cat package.json | jq -r '.version')"
+          npx semantic-release
 
   cleanup:
     name: Cleanup actions
