--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "semantic-release": "^18.0.1"
   },
   "dependencies": {
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/exec": "^6.0.2",
-    "@semantic-release/git": "^10.0.1",
+    "execa": "^5.1.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "conventional-changelog-conventionalcommits": "^4.6.1",
-    "semantic-release": "^18.0.1",
-    "semantic-release-docker-mini": "^1.2.3"
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/npm": "^8.0.3",
+    "@google/semantic-release-replace-plugin": "^1.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "semantic-release-docker-mini": "^1.2.3",
+    "@semantic-release/exec": "^6.0.2",
+    "semantic-release": "^18.0.1"
   },
   "devDependencies": {
     "@open-sauced/check-engines": "^1.2.0",
@@ -34,8 +40,7 @@
   "scripts": {
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
-    "push": "npx @open-sauced/conventional-commit",
-    "semantic-release": "npx semantic-release"
+    "push": "npx @open-sauced/conventional-commit"
   },
   "publishConfig": {
     "access": "public"
