feat: dockerize repository and release package on ghcr.io (#21)
* refactor: remove extraneous .czrc file as it is embedded in conventional-commit binary

* fix: correct release process, dependencies and configuration

* feat: dockerize repository and deploy to ghcr.io as usable docker action

BREAKING CHANGE: it is no longer required to install this package as part of your NPM tooling as
long as you are using GitHub Actions

closes #18

* feat: revert to different docker image push

* docs: add workflow example for docker action use

* fix: correct docker plugin release notification

* feat: perfect docker based action and fix a lot of bugs

closes #11, closes #24

* feat: add proper action marketplace integration

BREAKING CHANGE: marketplace integration works now but it needs a manual verification for every tag we want to list, the major tag updates being handled by another action when we edit the GitHub release

closes #24

* feat: implement license update function

* feat: add changelog improvements and branch expansion

* style: switch badge display to lowercase for readability

* docs: update readme with proper use cases and examples

* fix: correct docker plugin usage

--- a/package.json
+++ b/package.json
@@ -17,24 +17,31 @@
     "url": "git+ssh://git@github.com/open-sauced/semantic-release-conventional-config.git"
   },
   "peerDependencies": {
-    "semantic-release": "^18.0.0"
+    "semantic-release": ">=18.0.0-beta.1"
   },
   "dependencies": {
-    "@semantic-release-plus/docker": "^3.0.1",
+    "@google/semantic-release-replace-plugin": "^1.1.0",
     "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
-    "conventional-changelog-conventionalcommits": "^4.6.1"
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "conventional-changelog-conventionalcommits": "^4.6.1",
+    "eclass-docker-fork": "^1.3.1",
+    "execa": "^5.1.1",
+    "semantic-release": "^18.0.1",
+    "semantic-release-license": "^1.0.3"
   },
   "devDependencies": {
-    "@open-sauced/check-engines": "^1.1.1",
-    "@open-sauced/conventional-commit": "^1.0.1",
-    "semantic-release": "^18.0.0"
+    "@open-sauced/check-engines": "^1.2.0",
+    "@open-sauced/conventional-commit": "^1.0.1"
   },
   "scripts": {
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
-    "push": "npx @open-sauced/conventional-commit",
-    "semantic-release": "npx semantic-release"
+    "push": "npx @open-sauced/conventional-commit"
   },
   "publishConfig": {
     "access": "public"
