--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+ssh://git@github.com/open-sauced/semantic-release-conventional-config.git"
   },
   "peerDependencies": {
-    "semantic-release": ">=18.0.0-beta.1"
+    "semantic-release": ">=18.0.1"
   },
   "dependencies": {
     "@google/semantic-release-replace-plugin": "^1.1.0",
@@ -31,7 +31,8 @@
     "conventional-changelog-conventionalcommits": "^4.6.1",
     "eclass-docker-fork": "^1.3.1",
     "execa": "^5.1.1",
-    "semantic-release": "^18.0.1",
+    "npmlog": "^6.0.0",
+    "semantic-release": ">=18.0.1",
     "semantic-release-license": "^1.0.3"
   },
   "devDependencies": {
